# stack-back

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  tox.ini
.github/workflows/: build-publish.yml  python-tests.yml
docs/: conf.py
docs/guide/: rcb.rst
src/: .dockerignore  Dockerfile  pyproject.toml  setup.py
src/restic_compose_backup/: backup_runner.py  cli.py  cli_reads.py  cli_writes.py  commands.py  consts.py  containers.py  containers_db.py  log.py  restic.py  utils.py
src/restic_compose_backup/alerts/: base.py  discord.py  smtp.py
src/tests/: tests.py
