[project]
name = "stack-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker>=7.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "setuptools>=75.8.0",
    "types-docker>=7.1.0.20241229",
    "types-requests>=2.32.0.20241016",
    "types-setuptools>=75.8.0.20250110",
]
test = [
    "pytest==8.3.4",
    "tox>=4.24.1",
]
