[project]
name = "stack-back"
description = "Easy, automated, and incremental backups for any Docker Compose stack using restic."
authors = [{name = "Einar Forselv", email = "eforselv@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker~=7.1.0",
    "requests~=2.32.3",
]
dynamic = ["version"]

[project.urls]
repo = "https://github.com/lawndoc/stack-back"

[project.scripts]
restic-compose-backup = "restic_compose_backup.cli:main"
rcb = "restic_compose_backup.cli:main"

[build-system]
requires = ["setuptools >= 75.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "restic_compose_backup.__version__"}

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "setuptools>=75.8.0",
    "types-docker>=7.1.0.20241229",
    "types-requests>=2.32.0.20241016",
    "types-setuptools>=75.8.0.20250110",
]
test = [
    "pytest==8.3.4",
]
