[project]
name = "restic_compose_backup"
version = "1.2.0"
description = "Backup Docker Compose volumes and databases with Restic"
requires-python = ">=3.12"
dependencies = [
    'docker>=7.1.0',
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "black>=25.1.0",
    "types-docker>=7.1.0.20241229",
    "types-requests>=2.32.0.20241016",
    "types-setuptools>=75.8.0.20250110",
    "pre-commit>=4.2.0",
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["tests.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]

[project.scripts]
restic-compose-backup = "restic_compose_backup.cli:main"
rcb = "restic_compose_backup.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["restic_compose_backup"]
